--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,31 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Markdown(prose) styles */
+.prose h2 {
+  @apply text-2xl font-bold mt-8 mb-4;
+}
+.prose p {
+  @apply my-4;
+}
+.prose ul {
+  @apply list-disc pl-5 my-4;
+}
+.prose li {
+  @apply mb-2;
+}
+
+/* Markdown(prose) styles */
+.prose h2 {
+  @apply text-2xl font-bold mt-8 mb-4;
+}
+.prose p {
+  @apply my-4;
+}
+.prose ul {
+  @apply list-disc pl-5 my-4;
+}
+.prose li {
+  @apply mb-2;
+}
